--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "vim/vim-rails"]
 	path = vim/vim-rails
 	url = https://github.com/tpope/vim-rails.git
+[submodule "vim/vim-fugitive"]
+	path = vim/vim-fugitive
+	url = https://github.com/tpope/vim-fugitive.git
