--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "vim/bundle/scvim"]
 	path = vim/bundle/scvim
 	url = https://github.com/sbl/scvim.git
+[submodule "vim/bundle/vim-origami"]
+	path = vim/bundle/vim-origami
+	url = https://github.com/kshenoy/vim-origami.git
