--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "vim/bundle/hexman.vim"]
 	path = vim/bundle/hexman.vim
 	url = https://github.com/vim-scripts/hexman.vim.git
+[submodule "vim/bundle/supercollider"]
+	path = vim/bundle/supercollider
+	url = git://github.com/sbl/scvim.git
